fix plot visibility ## #

--- a/src/styles.css
+++ b/src/styles.css
@@ -42,7 +42,8 @@ body.dark {
 
 .canvas-container_ {
   overflow: hidden;
-  padding: 10px 0 0;
+  padding: 10px 18px 0;
+  margin: 0 -18px;
 }
 .canvas-container {
   width: 100%;
